Multiple sprites moving on loop at same time and George moving with bus, but moving one step ahead! Issues with trying to get two buses one after the other, so stuck with one for now

--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@
 
 /* <----- Basic grid styling for tester stage -----> */
 .grid-wrapper {
-  height: 600px;
-  margin-top: 100px;
-  padding-top: 150px;
+  height: 900px;
+  margin-top: 50px;
+  padding-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,13 +16,13 @@
   display: flex;
   flex-wrap: wrap;
   height: 800px;
-  width: 444px;
+  width: 700px;
 }
 
 .grid div {
   border: 1px solid black;
   height: 11.11%;
-  width: 20%;
+  width: 14%;
 }
 
 /* <----- Basic test sprites -----> */
@@ -45,9 +45,24 @@
   background-size: contain;
 }
 
+.bus {
+  background-image: url(./design-elements/bus.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 /* having George come last in order means he shows above other sprites */
 .george {
   background-image: url(./design-elements/costanza.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+
+/* <----- Border -----> */
+/* Looks shit right now but just testing! */
+.border {
+  background-image: url(./design-elements/brick.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
